# Uav_Delta_capture

./: .gitignore  20260413.md  CLAUDE.md  Dockerfile  GIT_GUIDE.md  README.md  bench_npu.py  bench_standalone.py  docker-compose.yml  start_ready.sh  stop_ready.sh  test_camera.py
archive_legacy/: 20260401.md
scripts/: setup_direct_ethernet.sh
uav_delta_capture/: ARCHITECTURE.md  README.md  check_uwb.py  start_mock_nodes.sh
uav_delta_capture/.devcontainer/: devcontainer.json
uav_delta_capture/scripts/: preflight_check.sh  start_mavros_with_local_position.sh  start_ros2_mavros_ready.sh
uav_delta_capture/src/delta_kinematics/: CMakeLists.txt  package.xml
uav_delta_capture/src/delta_kinematics/config/: delta_kinematics.yaml
uav_delta_capture/src/delta_kinematics/include/delta_kinematics/: delta_kinematics.hpp
uav_delta_capture/src/delta_kinematics/src/: delta_kinematics.cpp  delta_kinematics_node.cpp
uav_delta_capture/src/fcu_bridge/: CMakeLists.txt  README.md  package.xml
uav_delta_capture/src/fcu_bridge/config/: attitude_publisher.yaml
uav_delta_capture/src/fcu_bridge/launch/: attitude_publisher.launch.py
uav_delta_capture/src/fcu_bridge/src/: attitude_publisher_node.cpp  fcu_state_node.cpp  flight_commander_node.cpp  flight_state_machine_node.cpp  mock_mavros_pose_node.cpp
uav_delta_capture/src/perception_logic/: package.xml  setup.cfg  setup.py
uav_delta_capture/src/perception_logic/config/: perception_logic.yaml
uav_delta_capture/src/perception_logic/perception_logic/: perception_node.py
uav_delta_capture/src/safety/: CMakeLists.txt  README.md  package.xml
uav_delta_capture/src/uav_bridge/: CMakeLists.txt  package.xml
uav_delta_capture/src/uav_bridge/config/: failsafe.yaml  fcu_health.yaml  fcu_state.yaml  flight_commander.yaml  mavros_bridge.yaml  mission_sequencer.yaml  mock_mavros_pose.yaml  uav_bridge.yaml  uwb_navigator.yaml
uav_delta_capture/src/uav_bridge/launch/: uav_delta_mission.launch.py  uav_delta_system.launch.py  uav_delta_with_fcu.launch.py  uav_delta_with_mock_fcu.launch.py  uav_delta_with_uwb.launch.py
uav_delta_capture/src/uav_bridge/src/: failsafe_manager_node.cpp  fcu_link_monitor_node.cpp  fcu_state_node.cpp  flight_commander_node.cpp  mission_sequencer_node.cpp  mock_mavros_pose_node.cpp  uav_bridge_node.cpp  uwb_navigator_node.cpp
uav_delta_capture/src/uav_delta_msgs/: CMakeLists.txt  package.xml
uav_delta_capture/src/uav_delta_msgs/msg/: FcuState.msg  GraspTarget.msg  UwbAoa.msg  UwbStatus.msg
uav_delta_capture/src/uav_delta_msgs/srv/: FlightCommand.srv  SetArmStatus.srv
uav_delta_capture/src/uwb_driver/: CMakeLists.txt  README.md  package.xml
uav_delta_capture/src/uwb_driver/config/: uwb_aoa_driver.yaml
uav_delta_capture/src/uwb_driver/launch/: uwb_aoa_driver.launch.py
uav_delta_capture/src/uwb_driver/src/: uwb_aoa_driver_node.cpp
uav_delta_capture/src/uwb_navigation/: CMakeLists.txt  CMakeLists.txt.bak_follow_tag_20260716  README.md  README_TEST.md  package.xml  readme_command.md  readme_command.md.bak_follow_tag_20260716
uav_delta_capture/src/uwb_navigation/config/: test_mission.yaml  test_mission_bench.yaml  test_mission_mock.yaml  test_mission_real.yaml  test_mission_takeoff_forward_land.yaml  test_mission_takeoff_land.yaml  test_mission_takeoff_loiter_land.yaml  test_mission_takeoff_waypoint_return_land.yaml  test_mission_uwb_approach_land.yaml  test_mission_uwb_follow_tag_land.yaml  test_mission_uwb_grasp_return_land.yaml  test_mission_uwb_grasp_return_land.yaml.bak_20260716_assist  test_mission_uwb_grasp_return_land_arm_dev.yaml  test_mission_uwb_platform_grasp_return_direct_land.yaml  test_mission_uwb_platform_grasp_return_direct_land.yaml.bak_20260716_assist  uwb_mission_planner.yaml
uav_delta_capture/src/uwb_navigation/launch/: test_mission.launch.py  test_mission_bench.launch.py  test_mission_real.launch.py  test_mission_real_full.launch.py  test_mission_takeoff_forward_land.launch.py  test_mission_takeoff_land.launch.py  test_mission_takeoff_loiter_land.launch.py  test_mission_takeoff_waypoint_return_land.launch.py  test_mission_uwb_approach_land.launch.py  test_mission_uwb_follow_tag_land.launch.py  test_mission_uwb_grasp_return_direct_land.launch.py  test_mission_uwb_grasp_return_land.launch.py  test_mission_uwb_grasp_return_land_arm_dev.launch.py  test_mission_uwb_platform_grasp_return_direct_land.launch.py  uwb_calibration_recorder.launch.py  uwb_mission_planner.launch.py  uwb_navigation_system.launch.py
uav_delta_capture/src/uwb_navigation/src/: test_mission_node.py  test_mission_node.py.bak_20260716_assist  test_mission_node.py.bak_takeoff_relative_20260716  test_mission_uwb_follow_tag_node.py  test_mission_uwb_platform_node.py  test_mission_uwb_platform_node.py.bak_20260716_assist  test_mission_uwb_platform_node.py.bak_takeoff_relative_20260716  uwb_calibration_recorder.py  uwb_mission_planner_node.cpp
uav_delta_capture/src/vision_bridge/: CMakeLists.txt  README.md  package.xml
uav_delta_capture/src/vision_bridge/config/: vision_transform.yaml
uav_delta_capture/src/vision_bridge/launch/: vision_transform.launch.py
uav_delta_capture/src/vision_bridge/src/: jetson_bridge_node.py  perception_node.py  vision_transform_node.cpp
uav_delta_capture/src/vision_test/: README.md  package.xml  setup.py
uav_delta_capture/src/vision_test/config/: vision_test.yaml
uav_delta_capture/src/vision_test/launch/: vision_test.launch.py
uav_delta_capture/src/vision_test/vision_test/: bench_node.py  inference_engine.py  system_monitor.py
