<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fcu_bridge</name>
  <version>1.0.0</version>
  <description>飞控通信层：FCU 状态监控、飞行命令、姿态发布</description>
  <maintainer email="dev@example.com">dev</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>uav_delta_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
