<?xml version="1.0"?>
<package format="3">
  <name>perception_logic</name>
  <version>0.0.1</version>
  <description>Perception prototype node with reserved NPU inference interface.</description>
  <maintainer email="dev@todo.com">dev</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
