<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>uwb_navigation</name>
  <version>1.0.0</version>
  <description>UWB 导航控制：路径规划、航点跟踪、3D 坐标计算</description>
  <maintainer email="dev@example.com">dev</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>rcl_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>uav_delta_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
